# agenttrust

./: .gitignore  .gitleaks.toml  .lychee.toml  .vercelignore  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  execution.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docs-site/: .env.example  README.md  (+5 more)
programs/policy-vault/: Cargo.toml
programs/policy-vault/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/policy-vault/src/ext/: agent_registry.rs  atom_engine.rs  mod.rs  validation_registry.rs
programs/policy-vault/src/instructions/: gate_payment.rs  gate_payment_strict.rs  init_authority.rs  init_killswitch.rs  init_policy.rs  mod.rs  set_killswitch.rs
programs/policy-vault/src/policies/: composer.rs  counterparty_tier.rs  killswitch.rs  mod.rs  require_validation.rs  spending.rs  velocity.rs
programs/policy-vault/src/proofs/: inv_counterparty_tier_monotone.rs  inv_gate_payment_strict_correctness.rs  inv_multisig_threshold_enforced.rs  inv_paused_implies_no_allow.rs  inv_spending_allow_respects_caps.rs  inv_validation_expiry_correct.rs  inv_velocity_counter_le_limit.rs  mod.rs  smoke.rs
programs/policy-vault/src/state/: decision.rs  kill_switch_state.rs  mod.rs  policy_account.rs  policy_authority.rs  velocity_ledger.rs
programs/trustgate/: Cargo.toml
programs/trustgate/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/trustgate/src/ext/: agent_registry.rs  atom_engine.rs  mod.rs
programs/validation-registry/: Cargo.toml
programs/validation-registry/src/: errors.rs  events.rs  lib.rs
(+851 files in other folders)
