[package]
name = "policy-vault"
version = "0.1.0"
description = "AgentTrust PolicyVault — policy-as-code engine for agent payments"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.1"
