[package]
name = "trustgate"
version = "0.1.0"
description = "AgentTrust TrustGate — x402 facilitator program with PDA-signed feedback emission"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustgate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
