[package]
name = "validation-registry"
version = "0.1.0"
description = "AgentTrust ValidationRegistry — third leg of the ERC-8004 trust stack"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "validation_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.1"
